--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,5 +1,6 @@
 .header {
     position: fixed;
+    z-index: 2;
     top: 0;
     left: 0;
     width: 100%;
@@ -7,7 +8,7 @@
     background-color: #d49726;
     color: #fff;
     display: flex;
-    font-size: 50px;
+    font-size: 34px;
     font-weight: 700;
     justify-content: center;
     padding: 30px 0;
