--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -11,18 +11,22 @@
     align-items: center;
     color: #fff;
     display: flex;
-    font-size: 28px;
-    font-weight: 700;
+    font-size: 18px;
+    font-weight: 600;
     justify-content: center;
-    padding: 60px 0 30px 0;
+    padding: 40px 0 20px 0;
     text-decoration: none;
 }
 .footerLinks {
-    padding-bottom: 60px;
+    padding-bottom: 10px;
     justify-content: center;
     align-items: center;
     margin: 20px;
     display: flex;
+}
+.footerLinks img{
+    width: 40px;
+    height: 40px;
 }
 .footerLinks_linkedin img{
     margin: 0 40px;
@@ -30,6 +34,6 @@
 .footerLinks_habr img{
     margin: 0 40px;
     box-sizing: border-box;
-    width: 53px;
-    height: 53px;
+    width: 48px;
+    height: 48px;
 }
