--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -29,7 +29,7 @@
     height: 40px;
 }
 .footerLinks_git img{
-    margin: 0 40px;
+    margin: 0 34px 0 40px;
 }
 .footerLinks_telegram img {
     width: 55px;
